--- a/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
+++ b/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
@@ -31,6 +31,8 @@
 
         <ff:FFImage x:Name="Image"
                     CacheDuration="2"
+                    ErrorPlaceholder="error_placeholder.png"
+                    DownsampleToViewSize="True"
                     Transformations="{Binding Converter={StaticResource EmbedTransformation}}"/>
 
         <MediaElement x:Name="MediaElement"
