--- a/Mirko/Mirko.Universal/Pages/PivotPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/PivotPage.xaml
@@ -304,7 +304,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <controls:FullEntry IsHot="True"
-                                                Margin="-18,0,-18,0" />
+                                                Margin="-18,0,0,0" />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
