--- a/Mirko/Mirko.Universal/Pages/PivotPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/PivotPage.xaml
@@ -14,24 +14,34 @@
     d:DesignWidth="400"
     DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <Page.Resources>        
+    <Page.Resources>
         <DataTemplate x:Name="EntryTemplate"
                       x:DataType="models:EntryBaseViewModel">
             <controls:FullEntry Margin="-12,0,0,0"/>
         </DataTemplate>
+    </Page.Resources>
 
-        <Popup x:Key="NewMirkoEntriesPopup"
-               VerticalOffset="15"
+    <Grid x:Name="PivotPageGrid"
+          Loaded="PivotPageGrid_Loaded">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- New entries -->
+        <Popup x:Name="NewMirkoEntriesPopup"
+               VerticalOffset="25"
                IsOpen="True">
 
             <Popup.Resources>
-                <Storyboard x:Key="PopupFadeIn">
-                    <DoubleAnimation Storyboard.TargetName="PopupGrid"
+                <Storyboard x:Name="NewMirkoEntriesPopupFadeIn">
+                    <DoubleAnimation Storyboard.TargetName="NewMirkoEntriesPopupGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="{ThemeResource AppHeaderOpacity}"
                                      Duration="0:0:0.2" />
 
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PopupGrid"
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="NewMirkoEntriesPopupGrid"
                                                    Storyboard.TargetProperty="IsHitTestVisible"
                                                    BeginTime="0:0:0.2">
                         <DiscreteObjectKeyFrame KeyTime="0">
@@ -42,13 +52,13 @@
                     </ObjectAnimationUsingKeyFrames>
                 </Storyboard>
 
-                <Storyboard x:Key="PopupFadeOut">
-                    <DoubleAnimation Storyboard.TargetName="PopupGrid"
+                <Storyboard x:Name="NewMirkoEntriesPopupFadeOut">
+                    <DoubleAnimation Storyboard.TargetName="NewMirkoEntriesPopupGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="0.0"
                                      Duration="0:0:0.2"/>
 
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PopupGrid"
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="NewMirkoEntriesPopupGrid"
                                                    Storyboard.TargetProperty="IsHitTestVisible">
                         <DiscreteObjectKeyFrame KeyTime="0">
                             <DiscreteObjectKeyFrame.Value>
@@ -60,7 +70,7 @@
 
             </Popup.Resources>
 
-            <Grid x:Name="PopupGrid"
+            <Grid x:Name="NewMirkoEntriesPopupGrid"
                   Opacity="0"
                   Background="Transparent"
                   Height="44"
@@ -83,15 +93,6 @@
                            HorizontalAlignment="Center"/>
             </Grid>
         </Popup>
-    </Page.Resources>
-
-    <Grid x:Name="PivotPageGrid"
-          Loaded="PivotPageGrid_Loaded">
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
 
         <!-- Hot time span -->
         <Popup x:Name="TimeSpanIndicatorPopup"
@@ -259,10 +260,10 @@
                HorizontalAlignment="Stretch"
                SelectedIndex="{x:Bind VM.CurrentPivotItem, Mode=TwoWay}"
                SelectionChanged="MainPivot_SelectionChanged" 
-               Style="{StaticResource CustomPivotStyle}" >
-
+               Style="{StaticResource CustomPivotStyle}" >           
+            
             <!--Pivot item one-->
-            <PivotItem Margin="0,0,0,0">
+            <PivotItem Margin="0,0,0,0">              
                 <controls:ListViewEx x:Name="MirkoListView"
                                      ScrollingDown="ListView_ScrollingDown"
                                      ScrollingUp="ListView_ScrollingUp"
