--- a/Mirko/Mirko.WindowsPhone/Pages/ProfilePage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/ProfilePage.xaml
@@ -137,7 +137,7 @@
         
         <ListView.ItemTemplate>
             <DataTemplate>
-                <controls:Entry />
+                <controls:FullEntry />
             </DataTemplate>
         </ListView.ItemTemplate>
 
