--- a/Mirko/Mirko.Shared/Resources/Converters.xaml
+++ b/Mirko/Mirko.Shared/Resources/Converters.xaml
@@ -22,6 +22,7 @@
     <converters:MoreThanOneToString x:Key="MoreThanOneToString" />
     <converters:YouTubeApp x:Key="YouTubeApp" />
     <converters:StartPage x:Key="StartPage" />
+    <converters:BackgroundSelection x:Key="BackgroundSelection" />
     <converters:CountToBool x:Key="CountToBool" />
     <converters:HotTimeSpanStringConverter x:Key="HotTimeSpanStringConverter" />
     <converters:HotTimeSpanIndexConverter x:Key="HotTimeSpanIndexConverter" />
