Reduce memory usage.

--- a/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
+++ b/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
@@ -31,6 +31,7 @@
 
         <ff:FFImage x:Name="Image"
                     CacheDuration="2"
+                    TransformPlaceholders="False"
                     ErrorPlaceholder="error_placeholder.png"
                     DownsampleToViewSize="True"
                     Transformations="{Binding Converter={StaticResource EmbedTransformation}}"/>
